# Verba

./: .gitignore  MercerVoice.slnx
.github/workflows/: build.yml
MercerVoice/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  MercerVoice.csproj
MercerVoice/Components/: _Imports.razor
MercerVoice/Components/Pages/: Home.razor
MercerVoice/Services/: AzureAiService.cs  ConfigurationService.cs  DictationService.cs  DictationState.cs  HotkeyService.cs  IAccessibilityService.cs  IAudioRecorderService.cs  IDictationService.cs  ISpeechRecognitionService.cs  ITextInputService.cs  SpeechRecognitionService.cs
MercerVoice/wwwroot/: index.html
MercerVoice/wwwroot/css/: app.css  base.css  (+1 more)
mercer-voice-electron/: README.md  download-model.js  main.js  package-lock.json  package.json  paste.js  preload.js  record.js  store.js  transcribe.js
mercer-voice-electron/helpers/: fn-key-tap.swift  rctrl-hook.ps1
mercer-voice-electron/scripts/: postinstall.js
mercer-voice-electron/src/: dashboard.html  index.html  permissions.html
mercer-voice-tauri/: .gitignore  DISTRIBUTION.md  package-lock.json  package.json
mercer-voice-tauri/.cargo/: config.toml
mercer-voice-tauri/scripts/: apply-dock-icon.sh  clear-mac-icon-cache.sh  make-icns-apple.sh  strip-icon-background.js
mercer-voice-tauri/src/: dashboard.html  index.html
mercer-voice-tauri/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
mercer-voice-tauri/src-tauri/.cargo/: config.toml
mercer-voice-tauri/src-tauri/capabilities/: default.json
mercer-voice-tauri/src-tauri/icons/: icon.icns  icon.icns.bak
mercer-voice-tauri/src-tauri/src/: audio.rs  hotkey.rs  hotkey_state.rs  lib.rs  main.rs  paste.rs  permissions.rs  pill_hover.rs  sounds.rs  store.rs  transcribe.rs
(+17 files in other folders)
