[package]
name = "mercer-voice"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["multipart", "json", "rustls-tls"] }
cpal = "0.15"
hound = "3.5"
rodio = "0.18"
arboard = "3"
enigo = { version = "0.2", features = ["serde"] }
dotenvy = "0.15"

[target.'cfg(target_os = "windows")'.dependencies]
rdev = "0.5"
