[package]
name = "mercer-voice"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["multipart", "json", "rustls-tls", "stream"] }
futures-util = "0.3"
cpal = "0.15"
hound = "3.5"
rodio = "0.18"
arboard = "3"
enigo = { version = "0.2", features = ["serde"] }
mouse_position = "0.1"

# Whisper: Metal on macOS
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.15", default-features = false, features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = { version = "0.15", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
rdev = "0.5"
